base/rhbk/rhbk-db.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rhbk-db
spec:
  serviceName: rhbk-db-service
  selector:
    matchLabels:
      app: rhbk-db
  replicas: 1
  template:
    metadata:
      labels:
        app: rhbk-db
    spec:
      containers:
        - name: rhbk-db
          image: registry.redhat.io/rhscl/postgresql-10-rhel7
          volumeMounts:
            - mountPath: /var/lib/pgsql/data
              name: psqldata
      volumes:
        - name: psqldata
          persistentVolumeClaim:
            claimName: rhbk-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: rhbk-db
spec:
  selector:
    app: rhbk-db
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
