base/rhbk/no-ssl-sso-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: no-ssl-rhbk
  name: no-ssl-rhbk
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: rhbk-service
